<resources>
    <string name="app_name">Banking</string>
    <string name="LoginCustomer">Login by Customer</string>
    <string name="LoginAdmin">Login by Admin</string>
    <string name="OpenAccount">Open new Account</string>
    <string name="customerID">Customer ID (If Any)</string>
    <string name="name">Name</string>
    <string name="Address">Address</string>
    <string name="CreateAccount">Create My Account</string>
    <string name="Email">Email</string>
    <string name="AccountNumber">Account Number</string>
    <string name="AccountType">Account Type</string>
    <string name="Balance">Balance</string>
    <string name="PerformActions">Perform Actions</string>
    <string name="Refer">Refer</string>
    <string name="CustomerID">Customer Number</string>
    <string name="Login">Login</string>
    <string name="Withdraw">Withdraw</string>
    <string name="Deposit">Deposit</string>
    <string name="Enteramount">Enter an amount</string>
    <string name="TransactionID">TransactionID</string>
    <string name="amount">Amount</string>
    <string name="date">Date</string>
    <string name="loan">Loan Account</string>
    <string name="saving">Savings Account</string>
    <string name="current">Current Account</string>
    <string name="checkmycustomer">Check my customerID</string>
</resources>