<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="account" type="com.example.banking.viewmodel.OpenAccountViewModel"/>
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/topMargin"
        tools:context=".AddNewAccountActivity">

        <EditText
            android:id="@+id/txtCustomerID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@={account.customerId}"
            android:layout_margin="@dimen/marginAccount"
            android:hint="@string/customerID"
            android:inputType="textPersonName" />
        <Button
            android:layout_width="match_parent"
            android:layout_margin="10sp"
            android:id="@+id/btnCheckMyId"
            android:onClick="@{()->account.checkCustomerId()}"
            android:text="@string/checkmycustomer"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@={account.nametxt}"
            android:layout_margin="@dimen/marginAccount"
            android:inputType="textPersonName"
            android:hint="@string/name" />

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@={account.email}"
            android:layout_margin="@dimen/marginAccount"
            android:hint="@string/Email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/txtAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@={account.address}"
            android:layout_margin="@dimen/marginAccount"
            android:hint="@string/Address"
            android:inputType="textPostalAddress" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_margin="10sp"
            android:onCheckedChanged="@{()->account.onChangeOfAccount()}"
            android:id="@+id/radioGrpType"
            android:layout_height="wrap_content">
            <RadioButton
                android:text="@string/saving"
                android:id="@+id/radioSaving"
                android:checked="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <RadioButton
                android:text="@string/current"
                android:id="@+id/radioCurrent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RadioGroup>
        <Button
            android:id="@+id/btnCreateAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/marginAccount"
            android:onClick="@{()->account.addAccount()}"
            android:text="@string/CreateAccount" />
    </LinearLayout>
</layout>